--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@
 !dependencies-apt.txt
 !dependencies-py3.txt
 !packages-ros.txt
-!launch.sh
+!launch
 
 # YOUR FILES LISTED BELOW THIS LINE (IMPORTANT: PREPEND !)
 # ----------------------------------------------------------------------------
